# freertos-pico

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
feature/dummy/: CMakeLists.txt
feature/led/: CMakeLists.txt  led.c
freertos/: CMakeLists.txt  FreeRTOSConfig.h
src/: CMakeLists.txt
src/common/log/: CMakeLists.txt  log.c  log.h
src/common/logger/: CMakeLists.txt  logger.c  logger.h
src/feature/dummy/: CMakeLists.txt  README.md  dummy.c
src/feature/flash_storage/: CMakeLists.txt  README.md  flash_storage.c
src/feature/led/: CMakeLists.txt  README.md  led.c
src/feature/msg_queue/: CMakeLists.txt  msg_queue.c
src/feature/reader/: CMakeLists.txt  README.md  mfrc522.c  mfrc522.h  reader.c
tests/: CMakeLists.txt
